Index notes added to indicate which versions were built for the 'V2 appeal form'

--- a/app/views/appeal/full/index.html
+++ b/app/views/appeal/full/index.html
@@ -30,6 +30,10 @@
       }) }}
     </h2>
 
+    {{ govukInsetText({
+      text: "This version was used to build our ‘V2 appeal form’"
+    }) }}
+
     <p class="govuk-!-margin-bottom-2">Changes:</p>
 
     <ul class="govuk-list govuk-list--bullet">
