Contact details update

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -52,6 +52,9 @@
           Service offline (needs review)
         </li>
         <li>
+          <a href="appeal/contact-details/">Contact details</a>
+        </li>
+        <li>
           <a href="appeal/withdraw-appeal/">Withdraw an appeal</a>
         </li>
         <li>
