--- a/app/views/appeal/contact-details/v1/appellant-name.html
+++ b/app/views/appeal/contact-details/v1/appellant-name.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'What is the name of the individual who made the application?' %}
+{% set title = 'What is the applicant’s name?' %}
 
 {% block questions %}
 
@@ -13,7 +13,7 @@
   }) %}
 
   <p class="govuk-hint">
-    Enter the name of the individual on the planning application.
+    Enter the name as it’s written on the planning application form.
   </p>
 
   {{ govukInput({
@@ -37,6 +37,17 @@
       html: 'Last name'
     },
     autocomplete: 'family-name',
+    spellcheck: false
+  }) }}
+
+  {{ govukInput({
+    id: 'optional-appellant-company-name',
+    name: 'optional-appellant-company-name',
+    value: data['optional-appellant-company-name'],
+    classes: 'govuk-!-width-three-quarters',
+    label: {
+      html: 'Organisation name (optional)'
+    },
     spellcheck: false
   }) }}
 
