Appeal details for appellant showing extra questions inline

--- a/app/views/_includes/appellant/table-full-submission.html
+++ b/app/views/_includes/appellant/table-full-submission.html
@@ -7,27 +7,27 @@
   rows: [
     {
       key: {
-        html: 'Agent name',
+        html: 'Was the application made in your name?',
         classes: 'govuk-!-width-one-third'
       },
       value: {
-        html: 'Jani Mikkonen<br>Mikkonenonian Co. Ltd'
+        html: 'Yes'
       }
     },
     {
       key: {
-        html: 'Named on the application'
+        html: 'Contact details'
       },
       value: {
-        html: 'Mariella Bidbod'
+        html: 'Mariella Bidbod<br>mariellabidbod@email.com'
       }
     },
     {
       key: {
-        html: 'Application reference'
+        html: 'Phone number'
       },
       value: {
-        html: '23/04125/FUL'
+        html: '07733555212'
       }
     },
     {
@@ -40,10 +40,34 @@
     },
     {
       key: {
+        html: 'What is the area of the appeal site?'
+      },
+      value: {
+        html: '22m²'
+      }
+    },
+    {
+      key: {
+        html: 'Is the site in a green belt?'
+      },
+      value: {
+        html: 'No'
+      }
+    },
+    {
+      key: {
         html: 'Site fully owned'
       },
       value: {
         html: 'Yes'
+      }
+    },
+    {
+      key: {
+        html: 'Will an inspector need to access your land or property?'
+      },
+      value: {
+        html: 'No'
       }
     },
     {
@@ -72,10 +96,50 @@
     },
     {
       key: {
+        html: 'Application reference'
+      },
+      value: {
+        html: '23/04125/FUL'
+      }
+    },
+    {
+      key: {
+        html: 'What date did you submit your planning application?'
+      },
+      value: {
+        html: 45 | daysAgo
+      }
+    },
+    {
+      key: {
+        html: 'Enter the description of development'
+      },
+      value: {
+        html: 'New facia to 3rd floor dorma and change of roof material'
+      }
+    },
+    {
+      key: {
+        html: 'Did the local planning authority change the description of development?'
+      },
+      value: {
+        html: 'No'
+      }
+    },
+    {
+      key: {
         html: 'Preferred procedure'
       },
       value: {
         html: 'Hearing'
+      }
+    },
+    {
+      key: {
+        html: 'Are there other appeals linked to your development?'
+      },
+      value: {
+        html: 'No'
       }
     }
 
@@ -147,6 +211,14 @@
       },
       value: {
         html: '<a href="#" class="govuk-link">Appeal statement 2023.pdf</a><br>'
+      }
+    },
+    {
+      key: {
+        html: 'Costs application'
+      },
+      value: {
+        html: '<a href="#" class="govuk-link">Appeal cost application 2023.pdf</a><br>'
       }
     },
     {
