Quick fix to prototype link for 'no appeals' view of appellant dashboard

--- a/app/views/appeal/more-than-one-appeal/v5/your-appeals.html
+++ b/app/views/appeal/more-than-one-appeal/v5/your-appeals.html
@@ -4,7 +4,7 @@
   {
     href: 'your-appeals?current-appeals=no&submitted-appeals=no&decided-appeals=no',
     text: 'No appeals'
-  } if data['current-appeals'] == 'yes' else
+  } if data['current-appeals'] != 'no' else
 
   {
     href: 'your-appeals?current-appeals=yes&submitted-appeals=yes&decided-appeals=yes',
