--- a/app/views/appeal/appeals/v2/appeal-details.html
+++ b/app/views/appeal/appeals/v2/appeal-details.html
@@ -51,7 +51,20 @@
   {
     href: '?appeal-type=inquiry&questionnaire=complete&lpa-statement=complete&other-statements=complete&final-comments=&other-final-comments=&proofs=complete&other-proofs=complete&timings=complete&other-timings=complete&appeal-decided=complete',
     text: 'Inquiry appeal decided'
+  },
+  {
+    href: '?appeal-type=written&questionnaire=complete&lpa-statement=complete&other-statements=&final-comments=due&other-final-comments=&proofs=&other-proofs=&timings=&other-timings=&appeal-decided=&site-visit=access-required',
+    text: 'Access required site visit'
+  },
+  {
+    href: '?appeal-type=written&questionnaire=complete&lpa-statement=complete&other-statements=&final-comments=due&other-final-comments=&proofs=&other-proofs=&timings=&other-timings=&appeal-decided=&site-visit=accompanied',
+    text: 'Accompanied site visit'
+  },
+  {
+    href: '?appeal-type=written&questionnaire=complete&lpa-statement=complete&other-statements=&final-comments=due&other-final-comments=&proofs=&other-proofs=&timings=&other-timings=&appeal-decided=&site-visit=unaccompanied',
+    text: 'Unaccompanied site visit'
   }
+
   ]
 %}
 
