--- a/app/views/appeal/appeals/v2/appeal-details.html
+++ b/app/views/appeal/appeals/v2/appeal-details.html
@@ -205,6 +205,13 @@
   <!-- metadata -->
   <div class="govuk-grid-column-full">
     {% include "/_includes/appellant/meta-full-appeal.html" %}
+  </div>
+
+  <div class="govuk-grid-column-two-thirds">
+    {% include "/_includes/appellant/site-visit-notice.html" %}
+  </div>
+
+  <div class="govuk-grid-column-full">
     <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
   </div>
 
