IP service index link updates

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -481,7 +481,10 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="/interested/" class="govuk-link govuk-link--no-visited-state">Comment on a planning appeal (summary of progress)</a>
+          <a href="/interested/" class="govuk-link govuk-link--no-visited-state">Interested in a planning appeal (summary of progress)</a>
+        </li>
+        <li>
+          <a href="/interested/comment" class="govuk-link govuk-link--no-visited-state">Comment on a planning appeal (summary of progress)</a>
         </li>
       </ul>
 
@@ -491,7 +494,7 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="interested/find-appeal/v8/appeal-notice-email-full">Notice of an appeal from LPA</a>
+          <a href="interested/find-appeal/v10/appeal-notice-email-full">Notice of an appeal from LPA</a>
         </li>
         <li>
           <a href="interested/find-appeal/v10/guidance">Guidance: Comment on a planning appeal</a>
@@ -526,10 +529,10 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="interested/find-appeal/v8/appeal-details?status=open&appeal=1&appealCode=012726">Appeal open for comments</a>
+          <a href="interested/find-appeal/v10/appeal-details?status=open&appeal=1&appealCode=012726">Appeal open for comments</a>
         </li>
         <li>
-          <a href="interested/comment/v8/your-name">Comment on an appeal</a>
+          <a href="interested/comment/v9/your-name">Comment on an appeal</a>
         </li>
       </ul>
 
@@ -538,13 +541,13 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="interested/find-appeal/v9/appeal-details?status=closed&appeal=1&appealCode=011362">Appeal closed for comments</a>
+          <a href="interested/find-appeal/v10/appeal-details?status=closed&appeal=1&appealCode=011362">Appeal closed for comments</a>
         </li>
         <li>
-          <a href="interested/find-appeal/v9/closed-appeals?status=completed&appeal=1&appealCode=010234">Decided appeals</a>
+          <a href="interested/find-appeal/v10/closed-appeals?status=completed&appeal=1&appealCode=010234">Decided appeals</a>
         </li>
         <li>
-          <a href="interested/find-appeal/v9/appeal-details?status=completed&appeal=1&appealCode=010234">Decided appeal</a>
+          <a href="interested/find-appeal/v10/appeal-details?status=completed&appeal=1&appealCode=010234">Decided appeal</a>
         </li>
       </ul>
 
