Summary changes update for IP service updates

--- a/app/views/interested/comment/index.html
+++ b/app/views/interested/comment/index.html
@@ -36,7 +36,13 @@
 
     <ul class="govuk-list govuk-list--bullet">
       <li>
-        added address check and input
+        check for address and input added
+      </li>
+      <li>
+        check answers added
+      </li>
+      <li>
+        content changes (removed ‘You must be over 18 to comment’ content)
       </li>
     </ul>
 
@@ -74,8 +80,8 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          we did this work alongside <a href="../find-appeal/v8/guidance" class="govuk-link govuk-link--no-visited-state">v8 of find-appeal</a><br>
-          <a href="../find-appeal/" class="govuk-link govuk-link--no-visited-state">See find-appeal versions</a>
+          we did this work alongside <a href="find-appeal/v8/guidance" class="govuk-link govuk-link--no-visited-state">v8 of find-appeal</a><br>
+          <a href="find-appeal/" class="govuk-link govuk-link--no-visited-state">See find-appeal versions</a>
         </li>
       </ul>
 
