--- a/app/views/appeal/before-you-start/v17/other-planning-types.html
+++ b/app/views/appeal/before-you-start/v17/other-planning-types.html
@@ -26,7 +26,7 @@
         <li>Discontinuance notice<p></p></li>
       </ul>,
 
-      <div class="govuk-radios" data-module="govuk-radios">
+      <div class="govuk-radios--inline" data-module="govuk-radios--inline">
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="unsupported-appeals" name="unsupported-appeals" type="radio" value="Yes">
           <label class="govuk-label govuk-radios__label" for="appeal-type">
