--- a/app/views/appeal/before-you-start/index.html
+++ b/app/views/appeal/before-you-start/index.html
@@ -23,7 +23,7 @@
 
     <section class="govuk-!-margin-bottom-6">
 
-      {% set version = "16" %}
+      {% set version = "17" %}
       <h2 class="govuk-heading-m">
         Version {{version}}
         {{ govukTag({
@@ -38,7 +38,7 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          HAS and S78 routing (not listed building consent)
+          LBC routing
         </li>
       </ul>
 
@@ -49,6 +49,32 @@
       }) }}
 
     </section>
+
+    
+
+    {% set v16HTML %}
+    <section>
+      {% set version = "16" %}
+      <p class="govuk-!-margin-bottom-2">
+        Changes:
+      </p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          HAS and S78 routing (not listed building consent)
+        </li>
+      <ul class="govuk-list govuk-list--bullet">
+        
+      </ul>
+      {{ govukButton({
+        html: 'View prototype',
+        href: 'v'+version+'/',
+        isStartButton: true
+      }) }}
+    </section>
+      {% endset -%}
+
+
+
 
     {% set v15HTML %}
     <section>
@@ -80,6 +106,7 @@
         </li>
       </ul>
 
+      
       {{ govukButton({
         html: 'View prototype',
         href: 'v'+version+'/',
@@ -134,6 +161,15 @@
       id: 'previous',
       classes: 'govuk-!-margin-top-9',
       items: [
+
+      {
+        heading: {
+          html: 'Version 16 <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">Ready for research</strong>'
+        },
+        content: {
+          html: v16HTML
+        }
+      },
 
         {
           heading: {
