--- a/app/views/appeal/before-you-start/v17/common/lb-decision-date.html
+++ b/app/views/appeal/before-you-start/v17/common/lb-decision-date.html
@@ -1,21 +1,13 @@
 {% extends '_layouts/layout-main.html' %}
 {% set prototypeLinks = [{href: '../errors/out-of-time', text: 'Appeal window has passed'}] %}
 
-{% set title = 'What&rsquo;s the date on the full planning decision letter from the local planning authority?' %}
-
-
-
-
+{% set title = 'What&rsquo;s the date on the listed building consent decision letter from the local planning authority?' %}
 
 
 {% block questions %}
-
-
-
-
   {{ govukDateInput({
-    id: 'decision-date',
-    namePrefix: 'decision-date',
+    id: 'lb-decision-date',
+    namePrefix: 'lb-decision-date',
     fieldset: {
       legend: {
         html: title,
@@ -24,7 +16,7 @@
       }
     },
     hint: {
-      html: '<p class="govuk-body">You can find the date on the letter confirming your application.</p><p class="govuk-body">For example, 31 3 2024</p>'
+      html: '<p class="govuk-body">You can find the date on the letter confirming your application</p><p class="govuk-body">For example, 31 3 2024</p>'
     },
     items: [
       {
