--- a/app/views/appeal/lbc/v3/task-list__prepare.html
+++ b/app/views/appeal/lbc/v3/task-list__prepare.html
@@ -26,7 +26,7 @@
           html: 'Who made the application?'
         },
         value: {
-          html: (data['who-applied'] or 'Jan Dough')
+          html: (data['who-applied'] or 'You')
         }
         if data['who-applied-complete'] else
         {
@@ -61,12 +61,12 @@
         actions: {
           items: [
             {
-              href: 'prepare-appeal/appellant-contact-details?cya=true',
+              href: 'prepare-appeal/appellant-name?cya=true',
               html: 'Change'
             }
             if data['appellant-name-complete'] else
             {
-              href: 'prepare-appeal/appellant-contact-details',
+              href: 'prepare-appeal/appellant-name',
               html: 'Answer'
             }
           ]
@@ -78,7 +78,7 @@
           html: 'Contact details'
         },
         value: {
-          html: (data['appellant-contact-first-name'] +' '+ data['appellant-contact-last-name'])+('<br>'+data['optional-company-name'] if data['optional-company-name'])
+          html: ((data['appellant-contact-first-name'] or 'Jan')+' '+ (data['appellant-contact-last-name'] or 'Knight'))+('<br>'+data['optional-company-name'] if data['optional-company-name'])
         }
         if data['contact-details-complete'] else
         {
@@ -87,12 +87,12 @@
         actions: {
           items: [
             {
-              href: 'prepare-appeal/appellant-contact-details?cya=true',
+              href: 'prepare-appeal/contact-details?cya=true',
               html: 'Change'
             }
             if data['contact-details-complete'] else
             {
-              href: 'prepare-appeal/appellant-contact-details',
+              href: 'prepare-appeal/contact-details',
               html: 'Answer'
             }
           ]
