Small debug change

--- a/app/views/appeal/lbc/v3/task-list__prepare.html
+++ b/app/views/appeal/lbc/v3/task-list__prepare.html
@@ -78,7 +78,7 @@
           html: 'Contact name'
         },
         value: {
-          html: ((data['appellant-contact-first-name'] or 'Jan')+' '+ (data['appellant-contact-last-name'] or 'Knight'))+('<br>'+data['optional-company-name'] if data['optional-company-name'])
+          html: ((data['appellant-contact-first-name'] or 'Jan')+' '+ (data['appellant-contact-last-name'] or 'Tomlinson'))+('<br>'+data['optional-company-name'] if data['optional-company-name'])
         }
         if data['contact-details-complete'] else
         {
