--- a/app/views/appeal/before-you-start/v17/common/print-appeal.html
+++ b/app/views/appeal/before-you-start/v17/common/print-appeal.html
@@ -2,7 +2,10 @@
 
 {% set title = 'Appeal 12345260' %}
 
-{% block questions %}
+{% block content %}
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+
     <h1 class="govuk-heading-l">
       {{title}}
     </h1>
@@ -20,7 +23,7 @@
             classes: "govuk-!-width-one-half"
           },
           value: {
-            text: "Shropshire"          
+            text: "Shropshire"
           }
         },
         {
@@ -41,7 +44,7 @@
         }
       ]
     }) }}
-   
+
     <!--Prepare appeal-->
     <h2 class ="govuk-heading-m">Prepare appeal</h2>
 
@@ -75,7 +78,7 @@
         },
         {
           key: {
-            text: "What is the area of the appeal site??"
+            text: "What is the area of the appeal site?"
           },
           value: {
             html: "200 sqm"
@@ -191,7 +194,7 @@
           },
           value: {
             html: "No"
-          }        
+          }
         }
       ]
     }) }}
@@ -345,12 +348,14 @@
            },
            value: {
              html: "File name.png"
-           }        
+           }
          }
        ]
      }) }}
 
 {% endblock %}
 {% block buttons %}
-{% endblock %}
 
+    </div>
+  </div>
+{% endblock %}
