Added request a new code for confirm phone number

--- a/app/views/appeal/full/v5/prepare-appeal/confirm-phone-number.html
+++ b/app/views/appeal/full/v5/prepare-appeal/confirm-phone-number.html
@@ -20,6 +20,6 @@
     inputmode: "numeric"
   }) }}
 
-  <p class="govuk-body"><a href="#" class="govuk-link">Not received a text message?</a></p>
+  <p class="govuk-body"><a href="request-a-new-phone-number-code" class="govuk-link">Not received a text message?</a></p>
 
 {% endblock %}
