--- a/app/views/_includes/interested/full-appeal-meta.html
+++ b/app/views/_includes/interested/full-appeal-meta.html
@@ -21,7 +21,7 @@
     </dt>
     <dd class="govuk-summary-list__value">
       <p class="govuk-body">
-        012726
+        3012776
       </p>
     </dd>
   </div>
@@ -41,7 +41,13 @@
     </dt>
     <dd class="govuk-summary-list__value">
       <p class="govuk-body">
-        Written representations
+        {% if data['procedure'] == 'hearing' %}
+          Hearing
+        {% elseif data['procedure'] == 'inquiry' %}
+          Inquiry
+        {% else %}
+          Written representations
+        {% endif %}
       </p>
     </dd>
   </div>
@@ -50,7 +56,7 @@
       Appeal site
     </dt>
     <dd class="govuk-summary-list__value">
-      Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT
+      Borage Dell, Shamford, Cambridge CB22 2ET
     </dd>
   </div>
   <div class="govuk-summary-list__row">
@@ -58,7 +64,7 @@
       Appellant
     </dt>
     <dd class="govuk-summary-list__value">
-      Rachel Silver
+      Constantinos Michealides
     </dd>
   </div>
   <div class="govuk-summary-list__row">
@@ -74,7 +80,7 @@
       Application number
     </dt>
     <dd class="govuk-summary-list__value">
-      23/04125/FUL
+      24/08622/FA
     </dd>
   </div>
 </dl>
