--- a/app/views/manage/appeals/v8/appeal-details.html
+++ b/app/views/manage/appeals/v8/appeal-details.html
@@ -272,31 +272,46 @@
     </h1>
 
     {% if data['appeal-decided'] %}
-      <h2 class="govuk-heading-l">
-        Appeal decision
-      </h2>
-      {% if data['appeal-decided'] == 'allowed' %}
-      <strong class="govuk-tag govuk-tag--green govuk-!-margin-bottom-3">
-        Allowed
-      </strong>
-      {% elseif data['appeal-decided'] == 'dismissed' %}
-        <strong class="govuk-tag govuk-tag--orange govuk-!-margin-bottom-3">
-          Dismissed
+
+      {% set decisions %}
+
+        <h2 class="govuk-heading-m">
+          Appeal decision
+        </h2>
+
+        {% if data['appeal-decided'] == 'allowed' %}
+        <strong class="govuk-tag govuk-tag--green govuk-!-margin-bottom-3">
+          Allowed
         </strong>
-      {% elseif data['appeal-decided'] == 'split' %}
-        <strong class="govuk-tag govuk-tag--yellow govuk-!-margin-bottom-3">
-          Allowed in part
-        </strong>
-      {% elseif data['appeal-decided'] == 'varied' %}
-        <strong class="govuk-tag govuk-tag--orange govuk-!-margin-bottom-3">
-          Notice varied and upheld
-        </strong>
-      {% endif %}
-      <p class="govuk-body">
-        <a href="#">
-          Decision letter.doc
-        </a>
-      </p>
+        {% elseif data['appeal-decided'] == 'dismissed' %}
+          <strong class="govuk-tag govuk-tag--orange govuk-!-margin-bottom-3">
+            Dismissed
+          </strong>
+        {% elseif data['appeal-decided'] == 'split' %}
+          <strong class="govuk-tag govuk-tag--yellow govuk-!-margin-bottom-3">
+            Allowed in part
+          </strong>
+        {% elseif data['appeal-decided'] == 'varied' %}
+          <strong class="govuk-tag govuk-tag--orange govuk-!-margin-bottom-3">
+            Notice varied and upheld
+          </strong>
+        {% endif %}
+
+        <p class="govuk-body">
+          Decision issued on {{ 1 | daysAgo }}.
+        </p>
+        
+        <p class="govuk-body">
+          <a href="#">
+            APPEAL_DECISION_0201624_Haggis Farm Cottage.doc
+          </a>
+        </p>
+
+      {% endset -%}
+
+      {{ govukInsetText({
+        html: decisions
+      }) }}
 
       <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
 
